# CHIRP

./: .gitignore  CLAUDE.md  README.md  REPORT.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: fusion.yaml  mini_sweep.yaml  synthetic_smoke.yaml
eval/: __init__.py  attention_maps.py  evaluate.py  shap_analysis.py
experiments/: __init__.py  build_index.py  build_milestone3_artifacts.py  full_integration_run.py  generate_synthetic_data.py  mini_sweep.py  mini_sweep_resume.py  run_ablations.py  run_temporal_sweep.py  scrape_inaturalist.py
models/: __init__.py  baselines.py  efficientnet.py  fusion.py  swin_t.py
pipelines/: __init__.py  augment.py  datamodule.py  optical_flow.py  preprocess.py  video_dataset.py
slides/: build_milestone3_deck.js  chirp_milestone3.pptx
tests/: test_augment.py  test_config_and_trainer.py  test_datamodule_and_baselines.py  test_models.py  test_optical_flow.py  test_preprocess.py  test_video_dataset.py
training/: __init__.py  config.py  train.py  trainer.py
